.provarCaches/00D6C0000000xA6UAI/objects/sked__Recurring_Schedule__c.object
<CustomObject>
    <description>header for recurring schedules</description>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency (Every x weeks)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pattern__c</fullName>
        <label>Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skip_Holidays__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Holidays</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Event</label>
        <referenceTo>Training_Events__c</referenceTo>
        <relationshipLabel>Recurring Schedules</relationshipLabel>
        <relationshipName>Recurring_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueID__c</fullName>
        <externalId>true</externalId>
        <label>UniqueID</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Ack_All_Jobs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to force assigned resources to acknowledge all jobs in the series. Otherwise, acknowledging the first job in the series will auto acknowledge the rest.</description>
        <label>Acknowledge all jobs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Description__c</fullName>
        <description>short description of what the recurring schedule is for</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked__Summary__c</fullName>
        <description>auto generated summary the recurring schedule</description>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Recurring Schedule</label>
    <listViews>
        <fullName>sked__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>